--- a/src/components/Rectangle/Rectangle.module.css
+++ b/src/components/Rectangle/Rectangle.module.css
@@ -1,9 +1,15 @@
 .rectangle {
   display: flex;
   flex-flow: column;
+  justify-content: center;
   width: 370px;
   height: 551px;
   background-color: #f9e88e;
   border-radius: 4px;
   padding: 25px 50px;
+  margin: 0 5px;
+}
+.cost{
+  height: 60px;
+  background-color: red;
 }
